// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with an element children 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <div
    className="position-left-top direction-column sc-ckVGcZ kwCLGq"
  >
    <button
      className="md shape-round btn sc-kgoBCf iQjcqO"
      onClick={[Function]}
      size="md"
    >
      
      <span
        aria-hidden={true}
        className="fa fa-bars"
      />
    </button>
    <div
      className="position-left-top direction-column sc-jKJlTe hKYJBH"
      onClick={null}
    >
      <div
        direction="column"
      />
    </div>
  </div>
</span>
`;

exports[`When using snapshots Should render with the direction and position prop 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <div
    className="position-right-top direction-row sc-ckVGcZ kwCLGq"
  >
    <div
      className="position-right-top direction-row sc-jKJlTe hKYJBH"
      onClick={null}
    >
      <div
        direction="row"
      />
    </div>
    <button
      className="md shape-round btn sc-kgoBCf iQjcqO"
      onClick={[Function]}
      size="md"
    >
      
      <span
        aria-hidden={true}
        className="fa fa-bars"
      />
    </button>
  </div>
</span>
`;

exports[`When using snapshots Should render with the direction prop 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <div
    className="position-left-top direction-column sc-ckVGcZ kwCLGq"
  >
    <button
      className="md shape-round btn sc-kgoBCf iQjcqO"
      onClick={[Function]}
      size="md"
    >
      
      <span
        aria-hidden={true}
        className="fa fa-bars"
      />
    </button>
    <div
      className="position-left-top direction-column sc-jKJlTe hKYJBH"
      onClick={null}
    >
      <div
        direction="column"
      />
    </div>
  </div>
</span>
`;

exports[`When using snapshots Should render with the opened prop 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <div
    className="position-left-top direction-column opened sc-ckVGcZ kwCLGq"
  >
    <button
      className="md shape-round btn sc-kgoBCf iQjcqO"
      onClick={[Function]}
      size="md"
    >
      
      <span
        aria-hidden={true}
        className="fa fa-bars"
      />
    </button>
    <div
      className="position-left-top direction-column opened sc-jKJlTe hKYJBH"
      onClick={null}
    >
      <div
        direction="column"
      />
    </div>
  </div>
</span>
`;

exports[`When using snapshots Should render with the shape prop 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <div
    className="position-left-top direction-column sc-ckVGcZ kwCLGq"
  >
    <button
      className="md shape-round btn sc-kgoBCf iQjcqO"
      onClick={[Function]}
      size="md"
    >
      
      <span
        aria-hidden={true}
        className="fa fa-bars"
      />
    </button>
    <div
      className="position-left-top direction-column sc-jKJlTe hKYJBH"
      onClick={null}
    >
      <div
        direction="column"
        shape="square"
      />
    </div>
  </div>
</span>
`;

exports[`When using snapshots Should render with the size prop 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <div
    className="position-left-top direction-column sc-ckVGcZ kwCLGq"
  >
    <button
      className="md shape-round btn sc-kgoBCf iQjcqO"
      onClick={[Function]}
      size="md"
    >
      
      <span
        aria-hidden={true}
        className="fa fa-bars"
      />
    </button>
    <div
      className="position-left-top direction-column sc-jKJlTe hKYJBH"
      onClick={null}
    >
      <div
        direction="column"
        size="xs"
      />
    </div>
  </div>
</span>
`;
